2009-09-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.68

	Remove _NET_WM_ICON support since we don't use it and it has buggy
	code. Fixes: NB#138792

	* matchbox/core/mb-wm-client-window.c (icon_from_net_wm_icon):
	Removed.
	(mb_wm_client_window_sync_properties): Don't read _NET_WM_ICON.
	* matchbox/core/mb-wm-root-window.c
	(mb_wm_root_window_update_supported_props): Remove _NET_WM_ICON from
	the list of supported properties.
	* matchbox/core/mb-wm-types.h: Remove _NET_WM_ICON.
	* matchbox/core/mb-wm-atoms.c (mb_wm_atoms_init): Remove _NET_WM_ICON.
	* matchbox/core/mb-window-manager.c (mb_wm_handle_property_notify):
	Remove _NET_WM_ICON specific code.

2009-09-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Stack dialogs correctly if transient_for is None. This is the MB2 part
	of the NB#131703 fix.

	* matchbox/client-types/mb-wm-client-dialog.c:

2009-09-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.67

	Apply a patch from Laszlo Pere for NB#118818 - Focus goes away from
	the text entry in the "new tag"/"new geotag" dialogs after
	backgrounding

	* matchbox/core/mb-wm-client.c
	(mb_wm_client_get_last_focused_transient): Call
	mb_wm_client_get_last_focused_transient recursively to find the
	topmost transient that should be focused.

2009-09-10  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.66

	Regression-free version of:

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_maybe_redirect): New function to possibly
	redirect clients before they are reparented to the frame.
	* matchbox/comp-mgr/mb-wm-comp-mgr.[ch]: Add maybe_redirect class
	function for the above.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize): Call
	mb_wm_comp_mgr_client_maybe_redirect before reparenting the frame.
	Fixes: NB#122341 - Image viewer draws the content 3 times when it
	starts

	Release 0.2.65

	Revert the fix for NB#122341, it causes a regression.

	Release 0.2.64
